--- a/src/style.css
+++ b/src/style.css
@@ -83,3 +83,13 @@ button:focus-visible {
     background-color: #f9f9f9;
   }
 }
+
+@media (max-width: 768px) {
+  #app {
+    padding: 0;
+  }
+
+  body {
+    margin: 4rem;
+  }
+}
